# es-llm

./: .flake8  blood.py  build_banco_questoes.py  main.py  pyproject.toml  readme.md  resp.txt  resp2.txt  resp3.txt  settings.toml
agents/: blood.py  open_ai_agent.py  validator_agent.py
dados-gerados-por-fase/: fase_2.sql  fase_3.sql  fase_4.sql
dados-gerados-por-fase/fase_1/: BAS-A1.txt  BAS-A4.txt  BAS-A5.txt  BAS-A6.txt  INT-A1.txt  INT-B1.txt
db/: annotations.py  weyes_db.py
model/: questao.py
model_response/: Dark Spoiler.txt  Grandes tesouros.txt  Trevamata 2.txt
provider/: api_provider.py
providers/: api_provider.py
questoes/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  BAS-A5.json  BAS-A6.json  banco_questoes.json
responsev2/: BAS-A1.txt  BAS-A3.txt  BAS-A4.txt  BAS-A5.txt  INT-B1.txt  prompt
responsev3/: BAS-A1.txt  BAS-A2.txt  BAS-A4.txt  BAS-A5.txt  prompt
responsev4/: BAS-A3.txt  BAS-A4.txt  BAS-A5.txt  BAS-A6.txt  INT-A1.txt  INT-A2.txt
responsev5/: BAS-A1.txt  BAS-A4.txt  BAS-A6.txt  INT-A2.txt  INT-B1.txt
responsev6-gpt-4o/: BAS-A1.txt  BAS-A2.txt  BAS-A3.txt  BAS-A5.txt  BAS-A6.txt  INT-A1.txt  INT-A2.txt  INT-B1.txt  INT-B2.txt
scripts/: build_weyes.py
sources/questoes/: BAS-A1.json  BAS-A2.json  BAS-A3.json  BAS-A4.json  INT-A1.json  INT-A2.json  INT-B1.json  INT-B2.json  banco_questoes.json
sources/respostas/model_response/: A Força de Aceleração.txt  As desventuras de Snake.txt  Em Busca do Tesouro Perdido.txt  Ori and the Blind Forest 2.txt  Raffting nas cataratas.txt  (+2 more)
(+27 files in other folders)
