[tool.poetry]
name = "trabalho-llm"
version = "0.1.0"
description = ""
authors = ["Lucas <jlucas.ldm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.57.2"
black = "^24.10.0"
flake8 = "^7.1.1"
dynaconf = "^3.2.6"
setuptools = "^75.6.0"
sqlalchemy = "^2.0.36"
asyncmy = "^0.2.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
